# OpenXR-bgfx

./: App.cpp  CMakeLists.txt  CubeGraphics.cpp  GenerateSolution.sh  OpenXrProgram.cpp  README.md  build_bgfx_shader.bat  pch.h  vs_instancing.sc
cmake/: OpenXR_CMakeImport.cmake  Package_vc14.store.appxmanifest.in  bgfx_CMakeImport.cmake
